# Cpp-EmotionDetection

./: CMakeLists.txt  FaceDetector2.cpp  FaceDetector2.h  README.md  config.h
models/: saved_model.pb
models/scripts py/: Fine_tuned_CNN_model_conversion.py
src/: Main.cpp  main.cpp  main2  main2.cpp  mainConMETRICHE_IoU-precison-recall.cpp  mainDaUsareConMetrics.cpp  mainXmodelloKaggle.cpp  maininizialenonusare.cpp
src/detection/: detection.cpp  detection.h  detection2.cpp
src/emotion_recognition/: emotion_recognition.cpp  emotion_recognition.h  pre-processing-chat.cpp  pre-processing.cpp
src/emotion_recognitionXmodelloKaggle/: emotion_recognition.cpp  pre-processing.cpp
src/image/: Image.cpp  Image.h
src/metrics/: metrics.cpp  metrics.h
src/utils/: config.h  draw.cpp  draw.h  evaluation.h  filesystem.cpp  filesystem.h  pipeline.cpp  pipeline.h  selection.cpp  selection.h
